Prevent title wrap

--- a/app/assets/stylesheets/card_horizontal.css.scss
+++ b/app/assets/stylesheets/card_horizontal.css.scss
@@ -28,6 +28,7 @@
     .card-title {
       font-weight: bold;
       font-size: 16px;
+      white-space: nowrap;
     }
     .card-description {
       display: flex;
